--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-notes",
+  "name": "vue-playground",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -11,6 +11,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.18",
     "vite": "^2.7.2"
   }
 }
